# ta-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: benchmarks.rs
blueprint/: DEVELOPMENT_PHASES.md  function-list.md  ta-lib-formulas(1).md  ta-lib-formulas(2).md  ta-lib-formulas-index.md
docs/: README.md  api-overview.md  installation.md  quick-start.md
docs/phases/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md
src/: lib.rs
src/common/: constants.rs  errors.rs  mod.rs  test_helpers.rs  types.rs  utils.rs
src/math_operators/: add.rs  div.rs  max.rs  min.rs  mod.rs  mult.rs  sub.rs  sum.rs
src/math_transform/: arithmetic.rs  hyperbolic.rs  logarithmic.rs  mod.rs  rounding.rs  trigonometric.rs
src/momentum/: adx.rs  adxr.rs  apo.rs  aroon.rs  aroonosc.rs  bop.rs  cci.rs  cmo.rs  dx.rs  macd.rs  macdext.rs  macdfix.rs  mfi.rs  minus_di.rs  minus_dm.rs  mod.rs  mom.rs  plus_di.rs  plus_dm.rs  ppo.rs  roc.rs  rocp.rs  rocr.rs  rocr100.rs  rsi.rs  stoch.rs  stochf.rs  stochrsi.rs  ultosc.rs  willr.rs
src/overlap/: bbands.rs  dema.rs  ema.rs  kama.rs  ma.rs  mama.rs  mavp.rs  midpoint.rs  midprice.rs  mod.rs  sar.rs  sarext.rs  sma.rs  t3.rs  tema.rs  trima.rs  trix.rs  wma.rs
src/price_transform/: avgprice.rs  medprice.rs  (+3 more)
test/: README.md  TESTING_SUMMARY.md  run_tests.sh  rust_comparison_test.rs  rust_test_results.json  rust_test_runner.rs  simple_comparison.py  talib_reference_data.json  test_ta_rust_vs_talib.py
tests/: accuracy_tests.rs  mod.rs  reference_accuracy.rs  test_data.rs
(+18 files in other folders)
