[package]
name = "ta-rust"
version = "0.1.0"
edition = "2021"
authors = ["pixelbrow720"]
description = "Pure Rust implementation of TA-Lib (Technical Analysis Library) with 100% compatibility"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pixelbrow720/ta-rust"
documentation = "https://docs.rs/ta-rust"
keywords = ["technical-analysis", "trading", "finance", "indicators", "ta-lib"]
categories = ["algorithms", "mathematics", "science"]
readme = "README.md"

[dependencies]
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
serde_json = "1.0"

[[bench]]
name = "benchmarks"
harness = false

[features]
default = ["std"]
std = []
no_std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]